# learning

./: pyproject.toml
examples/: 1_train_perceptron.py
notebooks/: self_attention_check.ipynb
playground/: 1_basics.py  2_perceptron.py  3_scalar_autograd_engine.py  4_logistic_regression.py  5_byte_pair_encoding.py  6_char_tokenizer.py  7_bigram_model.py  8_transformer_decoder.py
src/mkvlib/: activation.py  char_tokenizer.py  layer.py  loss.py  normalize.py  scalar_autograd.py  train_utils.py  utils.py
src/mkvlib/models/: logistic_regression.py  perceptron.py
src/mkvlib/models/basic_gpt/: decoder_block.py  feedforward_layer.py  layer_norm.py  multi_head_self_attention.py  self_attention_head.py  transformer.py
src/mkvlib/test/: test_activation.py  test_normalize.py  utils.py
